@@ -15,3 +15,15 @@ application {
     mainModule.set("me.champeau.a4j.jsolex")
     mainClass.set("me.champeau.a4j.jsolex.app.JSolEx")
 }
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs(listOf("--add-modules", "jdk.incubator.vector"))
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs(listOf("--add-modules", "jdk.incubator.vector"))
+}
